Fix text overlap for long filename in the filelist (#7562)
* Fix file name text overlap in the file list.

* Add title attribute for tooltip on hover.

* Removed filename length check because we handle it in the CSS

--- a/public/styles/style-bootstrap.css
+++ b/public/styles/style-bootstrap.css
@@ -2084,6 +2084,9 @@ nav .lbbuttonsel2 {
     cursor: default;
     -khtml-user-drag: element;
     clear: both;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
     .filelist:hover {
